# gua

./: .dockerignore  .gitignore  README.md  default  docker-compose.yml  index.html  package.json  vite.config.ts
backend/: .env.example  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py
backend/src/wenyao_backend/: app.py  cleanup.py  config.py  database.py  errors.py  gua_data.py  models.py  readings.py  routes.py  serializers.py  time.py  usage.py  visitors.py
backend/tests/: test_api.py
data/gua/: 000000.json  000001.json  000010.json  000011.json  000100.json  000101.json  000110.json  000111.json  001000.json  001001.json  001010.json  001011.json  001100.json  001101.json  001110.json  001111.json  010000.json  010001.json  010010.json  010011.json  010100.json  010101.json  010110.json  010111.json  011000.json  011001.json  011010.json  011011.json  011100.json  011101.json  011110.json  011111.json  100000.json  100001.json  100010.json  100011.json  100100.json  100101.json  100110.json  100111.json  (+24 more)
deploy/: README.md  backend.env.example
frontend/: Dockerfile  nginx.conf
public/gua/: 000000.txt  000001.txt  000010.txt  000011.txt  000100.txt  000101.txt  000110.txt  000111.txt  001000.txt  001001.txt  001010.txt  001011.txt  001100.txt  001101.txt  001110.txt  001111.txt  010000.txt  010001.txt  010010.txt  010011.txt  010100.txt  010101.txt  010110.txt  010111.txt  011000.txt  (+39 more)
spec/: be.prd.md  prd.md
src/: App.tsx  app.less  common.less  index.css  types.ts
(+30 files in other folders)
